--- a/Saturn.Core.Web/Views/Home/Index.cshtml
+++ b/Saturn.Core.Web/Views/Home/Index.cshtml
@@ -2,7 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="card p-4 shadow" style="max-width: 400px; width: 100%;">
+        <h3 class="text-center mb-4">Saturn</h3>
+        <form asp-controller="Admin" asp-action="CheckUser" method="post">
+            <div class="mb-3">
+                <label for="username"  class="form-label">Kullanıcı Adı</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Parola</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="" required>
+            </div>
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary">Giriş</button>
+                <button type="button" class="btn btn-secondary">Parola Sıfırla</button>
+            </div>
+        </form>
+    </div>
 </div>
